# yolov8-ros1-infer

./: .gitignore  README.md  change_frameid.py  rosbag_play.sh  rosbag_record.sh
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: BoundingBoxArray.msg  TargetCoordinate.msg
src/my_image_publisher/: CMakeLists.txt  package.xml
src/my_image_publisher/src/: my_image_publisher.cpp
src/py_yolov8/: CMakeLists.txt  package.xml
src/py_yolov8/launch/: yolov8.launch
src/py_yolov8/src/: export_test.py  img_saver.py  py_yolov8.py
src/talker_listener_demo/: CMakeLists.txt  package.xml
src/talker_listener_demo/src/: listener.py  talker.py
src/target_dist_calculator/: CMakeLists.txt  package.xml
src/target_dist_calculator/launch/: target_dist.launch
src/target_dist_calculator/src/: target_dist_node.py
