<package format="2">
  <name>custom_msgs</name>
  <version>0.0.0</version>
  <description>The custom_msgs package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
